# Automatic-number-plate-recognition

./: .gitignore  Dockerfile  README.md  add_missing_data.py  app.py  config.yaml  main.py  pipeline.py  pyproject.toml  requirements.txt  trial.ipynb  visualize.py
Csv_results/: test.csv  test_interpolated.csv
sort/: sort.py
